# neuromorphic_cl

./: PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  setup.sh
configs/: default_config.yaml  medical_config.yaml
examples/: basic_usage.py
paper/: Makefile  PAPER_SUMMARY.md  neuromorphic_continual_learning.tex  paper_requirements.txt  references.bib
src/neuromorphic_cl/: __init__.py
src/neuromorphic_cl/cli/: evaluate.py  inference.py  train.py
src/neuromorphic_cl/configs/: schema.py
src/neuromorphic_cl/core/: answer_composer.py  concept_encoder.py  prototype_manager.py  snn.py  system.py
src/neuromorphic_cl/data/: dataloader.py
src/neuromorphic_cl/training/: distributed.py
src/neuromorphic_cl/utils/: generate_figures.py  logging.py  losses.py  metrics.py  preprocessing.py  registry.py
